[gd_scene load_steps=7 format=3 uid="uid://b1do5puw13uft"]

[ext_resource type="PackedScene" uid="uid://cyk50v17psa7f" path="res://core/game/core_minigame.tscn" id="1_b7xfk"]
[ext_resource type="Script" path="res://game/minigames/min_dummy/min_dummy.gd" id="2_jujod"]
[ext_resource type="PackedScene" uid="uid://bykot2qva7fec" path="res://game/minigames/min_dummy/pear.tscn" id="4_mjts1"]
[ext_resource type="AudioStream" uid="uid://cl1hj16lg5bxk" path="res://resources/sound/music/minigames/mus_kitchen.wav" id="4_yd5x0"]
[ext_resource type="Texture2D" uid="uid://buu8iy0yndmss" path="res://game/minigames/min_dummy/bon appétit.png" id="6_3lo0j"]
[ext_resource type="PackedScene" uid="uid://jogvak5ghlft" path="res://game/minigames/min_dummy/rising_chef.tscn" id="6_e4yns"]

[node name="min_dummy" instance=ExtResource("1_b7xfk")]
script = ExtResource("2_jujod")
target = ExtResource("4_mjts1")
max_pears = 3
instruction = "Collect!"
main_music = ExtResource("4_yd5x0")

[node name="music_player" parent="." index="0"]
volume_db = -3.0

[node name="Background" parent="." index="1"]
color = Color(1, 1, 1, 1)

[node name="BonAppétit" type="Sprite2D" parent="." index="2"]
modulate = Color(1, 1, 1, 0.0823529)
position = Vector2(954, 235)
texture = ExtResource("6_3lo0j")

[node name="Pears" type="Node2D" parent="." index="3"]

[node name="Chef1" parent="." index="4" instance=ExtResource("6_e4yns")]
visible = false
position = Vector2(889, 448)
scale = Vector2(0.9, 0.9)

[node name="Chef2" parent="." index="5" instance=ExtResource("6_e4yns")]
visible = false
position = Vector2(228, 523)
rotation = 3.14159
scale = Vector2(0.9, -0.9)

[node name="Chef3" parent="." index="6" instance=ExtResource("6_e4yns")]
visible = false
position = Vector2(508, -3.05176e-05)
rotation = 2.87979

[node name="UI" parent="." index="7"]
mouse_filter = 1
